--- a/style.css
+++ b/style.css
@@ -78,9 +78,9 @@ button {
   border: none;
   font-weight: 900;
   color: white;
-  letter-spacing: calc(var(--index) * 0.3);
+  letter-spacing: calc(var(--index) * 0.2);
   text-transform: uppercase;
-  font-size: calc(var(--index) * 1);
+  font-size: calc(var(--index) * 0.6);
 }
 footer {
   background: linear-gradient(
@@ -109,7 +109,7 @@ footer {
   content: "";
   width: 30px;
   height: 30px;
-  background: url(/img/Component\ 1.png) center/contain no-repeat;
+  background: url(Component\ 1.png) center/contain no-repeat;
   position: absolute;
   top: -10px;
   right: -10px;
@@ -201,9 +201,6 @@ footer > p {
   font-size: calc(var(--index) * 0.5);
 }
 @media screen and (max-width: 650px) {
-  body {
-    background: seagreen;
-  }
   .container {
     width: 80%;
     margin: auto;
